# binkedin

./: .gitignore  README.md
api-docs/: login.md
binkedin/: .env  .gitignore  Cargo.toml
binkedin-web/: package-lock.json  package.json  tailwind.config.ts
binkedin-web/app/: layout.tsx  page.tsx
binkedin-web/app/actions/: manageCookie.tsx
binkedin-web/app/connections/: page.tsx  requestbox.tsx
binkedin-web/app/createpost/: page.tsx
binkedin-web/app/home/: bottomBar.tsx  name-tag.tsx  page.tsx  postCard.tsx  postCardSkeleton.tsx  posts.tsx
binkedin-web/app/login/: manageCookie.tsx  page.tsx
binkedin-web/app/post/[postid]/: Commentbox.tsx  PostCard.tsx  page.tsx
binkedin-web/app/profile/[username]/: page.tsx  posts.tsx  profileCard.tsx  searchBar.tsx
binkedin-web/app/register/: page.tsx
binkedin/src/: main.rs
binkedin/src/httproutes/: authorisation_middleware.rs  comments.rs  followers.rs  likes.rs  mod.rs  posts.rs  profile.rs
binkedin/src/httproutes/onboarding/: login.rs
schemas/: schemas.sql  users.sql
